Auth Filters and Bean Util implementation

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="with=device-with, initial scale=1.0">
         <title> Farmer Consumer Linkage Management System </title>
     </head>
+    <!-- <link rel="stylesheet" href="styles.css"> -->
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.1/css/fontawesome.min.css">
     <body>
@@ -17,8 +18,8 @@
                     <i class="fa fa-times" onclick="hideMenu()" id="times"></i>
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="login.html">Login</a></li>
-                    <li><a href="Sign.php">Sign Up</a></li>
+                    <li><a href="./login">Login</a></li>
+                    <li><a href="./sign">Sign Up</a></li>
                     <li><a href="contact.php">Contact Us</a></li>
                     <li><a href="about.html">About Us</a></li>
                 </ul>                                                
