--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -16,7 +16,7 @@
         <div id="buttonz"></div>
 
         <button class="toggle-btn" onclick="login()">Login</button>
-        <button class="toggle-btn"><a href="Sign.html">Sign Up</a></button>
+        <button class="toggle-btn"><a href="./sign">Sign Up</a></button>
       </div>
 
       <form action="./login" method="POST" id="login" class="login-input-group">
