--- a/src/main/webapp/Sign.html
+++ b/src/main/webapp/Sign.html
@@ -74,7 +74,7 @@
 
         </div>
     </div>
-    <script src="js/login.js" type="text/javascript"></script>
+    <script src="./js/login.js" type="text/javascript"></script>
 </body>
 
 </html>
